# xianxiaochi

./: README.md
.github/workflows/: python-workflow.yml
backend/: pyproject.toml
backend/src/: main.py
backend/tests/: test_homepage.py
frontend/src/: App.vue
frontend/src/components/: HomePage.vue
